--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,5 +3,378 @@
 @import "reset";
 @import "libs";
 @import "global";
-
+header {
+	text-align: center;
+}
+.header {
+	&__logo {
+		padding: 88px 0 60px;
+	}
+}
+.menu {
+	border-top: 1px solid $grey-light;
+	&__list {
+		display: flex;
+		justify-content: center;
+	}
+	&__list-item {
+		width: 300px;
+		&:first-child {
+			border-left: 1px solid $grey-light;
+		}
+		&:last-child {
+			border-right: 1px solid $grey-light;
+		}
+	}
+	&__list-link {
+		font-size: 24px;
+		line-height: 28px;
+		color: $grey;
+		display: block;
+		padding: 34px 10px 38px;
+		border-left: 1px solid $grey-light;
+		border-right: 1px solid $grey-light;
+		transition: all 0.3s;
+		&--active,
+		&:hover {
+			color: $white;
+			background-color: $black;
+		}
+	}
+}
+.slider {
+	&__item {
+		min-height: 600px;
+		background-repeat: no-repeat;
+		background-position: top center;
+		background-size: cover;
+	}
+}
+.slick-arrow {
+	border: none;
+	outline: none;
+	background-color: transparent;
+	position: absolute;
+	top: 50%;
+	z-index: 5;
+	cursor: pointer;
+	transform: translateY(-50%);
+}
+.slick-next {
+	right: 20px;
+}
+.slick-prev {
+	left: 20px;
+}
+.search {
+	&__inner {
+		padding: 60px 0 70px;
+	}
+	&__form {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+	&__form-label {
+		color: $grey;
+		font-size: 24px;
+		line-height: 24px;
+		margin-right: 69px;
+		width: 155px;
+	}
+	&__form-input {
+		height: 70px;
+		width: 430px;
+		padding: 0 15px;
+		border: 2px solid $grey-light;
+		color: $grey;
+		font-size: 18px;
+		&::placeholder {
+			color: $grey;
+			font-size: 18px;
+			line-height: 24px;
+			font-family: "Roboto Condensed", sans-serif;
+			font-weight: 400;
+		}
+	}
+	&__form-btn {
+		border: none;
+		background-color: $grey-light;
+		color: #fff;
+		padding: 23px 23px 23px 36px;
+		padding-left: 36px;
+		font-size: 24px;
+		cursor: pointer;
+		position: relative;
+		&::before {
+			content: "";
+			position: absolute;
+			background-image: url("../images/search-icon.svg");
+			width: 18px;
+			height: 18px;
+			top: 26px;
+			left: 9px;
+		}
+	}
+}
+.popular {
+	text-align: center;
+	&__title {
+		background-color: #000;
+		color: $white;
+		line-height: 64px;
+		font-size: 48px;
+		font-family: "PT Serif", serif;
+		padding: 18px 15px;
+		text-align: center;
+		font-weight: 400;
+	}
+	&__inner {
+		display: flex;
+		justify-content: space-between;
+		padding: 100px 0;
+		flex-wrap: wrap;
+	}
+	&__img {
+		width: 280px;
+		height: 280px;
+		border-radius: 50%;
+		object-fit: cover;
+	}
+	&__item-title {
+		padding: 30px 10px;
+		font-size: 24px;
+		line-height: 24px;
+		font-weight: 400;
+		color: $grey;
+	}
+	&__link {
+		background-color: $grey-light;
+		color: $white;
+		text-decoration: none;
+		padding: 13px 48px;
+	}
+}
+.reason {
+	padding: 100px 0;
+	&__inner {
+		display: flex;
+		justify-content: space-between;
+	}
+	&__item {
+		width: 470px;
+	}
+	&__title {
+		font-family: "PT Serif", serif;
+		font-weight: 400;
+		font-size: 36px;
+		line-height: 36px;
+		color: $black;
+		margin-bottom: 20px;
+		padding-left: 136px;
+		position: relative;
+		&::before {
+			content: "";
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 103px;
+			height: 103px;
+		}
+		&--icon-1::before {
+			background-image: url("../images/time-icon.png");
+		}
+		&--icon-2::before {
+			background-image: url("../images/world-icon.png");
+		}
+	}
+	&__text {
+		margin-bottom: 42px;
+	}
+	&__link {
+		color: $grey;
+		padding-left: 36px;
+		position: relative;
+		&::before {
+			content: "";
+			position: absolute;
+			top: -4px;
+			left: 0;
+			width: 30px;
+			height: 30px;
+			background-image: url("../images/arrow-black.svg");
+		}
+	}
+}
+.best {
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	min-height: 100vh;
+	text-align: right;
+	&__title {
+		max-width: 457px;
+		margin-left: auto;
+		font-family: "PT Serif", serif;
+		font-weight: 400;
+		font-size: 48px;
+		line-height: 48px;
+		color: $white;
+		padding-top: 68px;
+		padding-bottom: 15px;
+	}
+	&__link {
+		text-decoration: none;
+		color: $white;
+		background-color: $black;
+		padding: 16px 18px;
+		display: inline-block;
+	}
+}
+.about {
+	background-color: $black;
+	padding: 100px 0;
+	color: $white;
+	&__inner {
+		display: flex;
+		justify-content: space-between;
+	}
+	&__title {
+		margin-bottom: 47px;
+		font-weight: 400;
+		font-family: "PT Serif", serif;
+		font-size: 48px;
+		line-height: 48px;
+		text-align: center;
+	}
+}
+.our-managers {
+	width: 297px;
+	&__title {
+		margin-bottom: 27px;
+	}
+	&__items {
+		display: flex;
+		justify-content: space-between;
+		text-align: center;
+	}
+	&__img {
+		width: 100px;
+		height: 100px;
+		border-radius: 50%;
+		object-fit: cover;
+		margin-bottom: 22px;
+	}
+	&__list {
+		line-height: 21px;
+		margin-bottom: 43px;
+	}
+	&__btn {
+		border: none;
+		color: $black;
+		background-color: $white;
+		padding: 16px 21px;
+		line-height: 18px;
+		cursor: pointer;
+	}
+}
+.blog {
+	width: 411px;
+	&__link {
+		line-height: 18px;
+		text-decoration: none;
+		color: $white;
+		margin-bottom: 28px;
+		padding-left: 67px;
+		display: inline-block;
+		position: relative;
+		&::before {
+			content: "";
+			position: absolute;
+			width: 30px;
+			height: 30px;
+			left: 0;
+			top: -4px;
+			background-image: url("../images/arrow-white.svg");
+		}
+	}
+}
+.reviews {
+	width: 300px;
+	&__img {
+		width: 300px;
+		height: 127px;
+		object-fit: cover;
+		margin-bottom: 22px;
+	}
+	&__text {
+		line-height: 21px;
+		margin-bottom: 22px;
+	}
+	&__link {
+		display: inline-block;
+		text-decoration: none;
+		color: $black;
+		background-color: $white;
+		padding: 16px 21px;
+		line-height: 18px;
+	}
+}
+.footer {
+	&__top {
+		padding: 100px 0;
+		background-color: $black;
+		color: $white;
+	}
+	&__top-inner {
+		display: flex;
+		align-items: center;
+	}
+	&__menu-list {
+		list-style: none;
+		width: 250px;
+		margin-right: 50px;
+	}
+	&__menu-link {
+		font-size: 24px;
+		line-height: 36px;
+		text-decoration: none;
+		color: $white;
+	}
+	&__form {
+		display: flex;
+		align-items: center;
+	}
+	&__form-label {
+		line-height: 18px;
+		color: $grey;
+		margin-right: 10px;
+	}
+	&__form-input {
+		display: block;
+		width: 511px;
+		height: 70px;
+		background-color: $white;
+		border: none;
+		padding: 0 15px;
+		font-family: "Roboto Condensed", sans-serif;
+		font-weight: 400;
+		font-size: 18px;
+		line-height: 24px;
+		color: $grey;
+		&::placeholder {
+		}
+	}
+	&__form-btn {
+		cursor: pointer;
+		color: $white;
+		padding: 23px 35px;
+		background-color: $grey-light;
+		border: none;
+	}
+	&__logo {
+		padding: 3px 0 23px;
+		text-align: center;
+	}
+}
 @import "media";
